objects/PHSS_User_Provisioning__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Standing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Good Standing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Phone__c</fullName>
        <label>Main Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marked_as_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked as Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SABA_Internal_ID__c</fullName>
        <externalId>true</externalId>
        <label>SABA Internal ID</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SABA_Person_Number__c</fullName>
        <externalId>true</externalId>
        <label>SABA Person Number</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHSS User Provisioning</label>
    <nameField>
        <displayFormat>PHSS-UP-{000000}</displayFormat>
        <label>PHSS User Provisioning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS User Provisioning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>